--- a/brigadeiro-2/index.html
+++ b/brigadeiro-2/index.html
@@ -24,7 +24,7 @@
                 <h2>Receita de Brigadeiro</h2>
                 <p>Brigadeiro tradicional, de colher, com leite condensado, com creme de leite, vegano, como recheio de bolo... Veja 10 receitas de brigadeiro para se deliciar!</p>
                 <ul>
-                    <li>a</li>
+                    <li>leite condensado</li>
                     <li>s</li>
                     <li>d</li>
                     <li>f</li>
