--- a/brigadeiro-2/index.html
+++ b/brigadeiro-2/index.html
@@ -24,10 +24,10 @@
                 <h2>Receita de Brigadeiro</h2>
                 <p>Brigadeiro tradicional, de colher, com leite condensado, com creme de leite, vegano, como recheio de bolo... Veja 10 receitas de brigadeiro para se deliciar!</p>
                 <ul>
-                    <li>leite condensado</li>
-                    <li>s</li>
-                    <li>d</li>
-                    <li>f</li>
+                    <li>1 caixa de leite condensado</li>
+                    <li>7 colheres (sopa) de achocolatado ou 4 colheres</li>
+                    <li>1 colher (sopa) de margarina sem sal</li>
+                    <li>chocolate granulado</li>
                     <li>g</li>
                 </ul>
             </div>
