modo-de-preparo

--- a/brigadeiro-2/index.html
+++ b/brigadeiro-2/index.html
@@ -33,9 +33,16 @@
         </div>
         
         <div class="preparo"> 
-
-
+            <h2>modo de preparo:</h2>
+            <ul>
+                <li>Panela</li>
+                <li>Espátula de Silicone</li>
+                <li>Prato Raso</li>
+                <li>Copo Medidor</li>
+            </ul>
             
+
+
         </div>
 
 
